# comfyui-aichat

./: README.md  __init__.py  gemini_nodes.py  nodes.py  pyproject.toml  requirements.txt
example_workflows/: gemini_lumina2.json  multiturn.json  openai_lumina2.json
