[project]
name = "aichat"
description = ""
version = "1.0.3"
license = {file = "LICENSE"}
dependencies = ["aiofiles", "httpx<0.28.0", "openai"]

[project.urls]
Repository = "https://github.com/spawner1145/comfyui-aichat"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-aichat"
Icon = ""
includes = []
