[project]
name = "aichat"
description = ""
version = "1.0.5"
license = {file = "LICENSE"}
dependencies = ["httpx<0.28.0", "openai"]

[project.urls]
Repository = "https://github.com/spawner1145/comfyui-aichat"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "spawner"
DisplayName = "comfyui-aichat"
Icon = ""
includes = []
